updates for dec 2021 second revision

--- a/stage_2_triple_processing/process_semrep_triples.ipynb
+++ b/stage_2_triple_processing/process_semrep_triples.ipynb
@@ -53,8 +53,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (1,4,5,6,13,14,15,16) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+      "/Users/pengja/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3165: DtypeWarning: Columns (1,4,5,6,13,14,15,16) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
      ]
     }
    ],
@@ -348,7 +348,7 @@
      "output_type": "stream",
      "text": [
       "There are 23 coronavirus-related terms (preferred name after normalizing COVID-19 and SARS-CoV-2)\n",
-      "{'COVID-19', 'SARS-CoV-2 related virus', 'SARS-CoV-2', 'SARS-CoV-2 protein', 'SARS-CoV-2 spread', 'COVID-19 patient', 'SARS-CoV-2 antibody', 'COVID-19 co-infection', 'COVID-19 testing', 'COVID-19 related infection', 'COVID-19 re-infection', 'Severe COVID-19', 'COVID-19 treatment', 'SARS-CoV-2 gene', 'COVID-19 vaccine', 'COVID-19 suspected', 'COVID-19 country', 'COVID-19 symptom', 'COVID-19 subject', 'COVID-19 acquired infection', 'Asymptomatic COVID-19', 'COVID-19 animal', 'SARS-CoV-2 PCR'}\n"
+      "{'COVID-19 subject', 'COVID-19 symptom', 'COVID-19 country', 'COVID-19 co-infection', 'SARS-CoV-2 PCR', 'COVID-19 re-infection', 'COVID-19 vaccine', 'SARS-CoV-2 spread', 'COVID-19 animal', 'SARS-CoV-2', 'COVID-19', 'COVID-19 treatment', 'COVID-19 related infection', 'SARS-CoV-2 protein', 'COVID-19 testing', 'SARS-CoV-2 gene', 'Asymptomatic COVID-19', 'COVID-19 acquired infection', 'COVID-19 suspected', 'COVID-19 patient', 'Severe COVID-19', 'SARS-CoV-2 antibody', 'SARS-CoV-2 related virus'}\n"
      ]
     }
    ],
@@ -394,7 +394,18 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-18-825388796121>:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  kg_df[rel_col] = kg_df[rel_col].str.replace(\"\\(SPEC\\)\", \"\")\n",
+      "<ipython-input-18-825388796121>:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  kg_df[rel_col] = kg_df[rel_col].str.replace(\"\\(INFER\\)\", \"\")\n"
+     ]
+    }
+   ],
    "source": [
     "kg_df[rel_col] = kg_df[rel_col].str.replace(\"\\(SPEC\\)\", \"\")\n",
     "kg_df[rel_col] = kg_df[rel_col].str.replace(\"\\(INFER\\)\", \"\")"
@@ -734,10 +745,10 @@
        "      <td>0</td>\n",
        "      <td>136</td>\n",
        "      <td>CORD-19</td>\n",
-       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>diagnosing;pnd;diagnoses;diagnostics;diagnosti...</td>\n",
        "      <td>Procedures</td>\n",
        "      <td>C0011900</td>\n",
-       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...</td>\n",
        "      <td>Living Beings</td>\n",
        "      <td>C0030705</td>\n",
        "    </tr>\n",
@@ -755,10 +766,10 @@
        "      <td>1</td>\n",
        "      <td>136</td>\n",
        "      <td>CORD-19</td>\n",
-       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>diagnosing;pnd;diagnoses;diagnostics;diagnosti...</td>\n",
        "      <td>Procedures</td>\n",
        "      <td>C0011900</td>\n",
-       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...</td>\n",
        "      <td>Living Beings</td>\n",
        "      <td>C0030705</td>\n",
        "    </tr>\n",
@@ -776,10 +787,10 @@
        "      <td>2</td>\n",
        "      <td>136</td>\n",
        "      <td>CORD-19</td>\n",
-       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>diagnosing;pnd;diagnoses;diagnostics;diagnosti...</td>\n",
        "      <td>Procedures</td>\n",
        "      <td>C0011900</td>\n",
-       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...</td>\n",
        "      <td>Living Beings</td>\n",
        "      <td>C0030705</td>\n",
        "    </tr>\n",
@@ -797,10 +808,10 @@
        "      <td>3</td>\n",
        "      <td>136</td>\n",
        "      <td>CORD-19</td>\n",
-       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>diagnosing;pnd;diagnoses;diagnostics;diagnosti...</td>\n",
        "      <td>Procedures</td>\n",
        "      <td>C0011900</td>\n",
-       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...</td>\n",
        "      <td>Living Beings</td>\n",
        "      <td>C0030705</td>\n",
        "    </tr>\n",
@@ -818,10 +829,10 @@
        "      <td>4</td>\n",
        "      <td>136</td>\n",
        "      <td>CORD-19</td>\n",
-       "      <td>diagnoses;diagnosis;diagnostics;diagnosed;diag...</td>\n",
+       "      <td>diagnosing;pnd;diagnoses;diagnostics;diagnosti...</td>\n",
        "      <td>Procedures</td>\n",
        "      <td>C0011900</td>\n",
-       "      <td>aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...</td>\n",
+       "      <td>ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...</td>\n",
        "      <td>Living Beings</td>\n",
        "      <td>C0030705</td>\n",
        "    </tr>\n",
@@ -845,18 +856,18 @@
        "4    47        4     136         CORD-19   \n",
        "\n",
        "                                               info1       type1 identifier1  \\\n",
-       "0  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
-       "1  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
-       "2  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
-       "3  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
-       "4  diagnoses;diagnosis;diagnostics;diagnosed;diag...  Procedures    C0011900   \n",
+       "0  diagnosing;pnd;diagnoses;diagnostics;diagnosti...  Procedures    C0011900   \n",
+       "1  diagnosing;pnd;diagnoses;diagnostics;diagnosti...  Procedures    C0011900   \n",
+       "2  diagnosing;pnd;diagnoses;diagnostics;diagnosti...  Procedures    C0011900   \n",
+       "3  diagnosing;pnd;diagnoses;diagnostics;diagnosti...  Procedures    C0011900   \n",
+       "4  diagnosing;pnd;diagnoses;diagnostics;diagnosti...  Procedures    C0011900   \n",
        "\n",
        "                                               info2          type2  \\\n",
-       "0  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
-       "1  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
-       "2  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
-       "3  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
-       "4  aisp;cip;op;patient;asp;tp;esp;ncpp;pts;ip;ipd...  Living Beings   \n",
+       "0  ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...  Living Beings   \n",
+       "1  ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...  Living Beings   \n",
+       "2  ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...  Living Beings   \n",
+       "3  ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...  Living Beings   \n",
+       "4  ipd;patients;cpps;aisp;esp;ip;tp;sp;ncip;asp;p...  Living Beings   \n",
        "\n",
        "  identifier2  \n",
        "0    C0030705  \n",
@@ -899,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
