--- a/stage_4_data_integration/integrate_data_source.ipynb
+++ b/stage_4_data_integration/integrate_data_source.ipynb
@@ -100,7 +100,7 @@
     "    df = df.merge(nodes_df[[identifier_col, id_col, info_col_agg, type_col_agg, identifier_col_agg]], left_on=identifier_col_2, right_on=identifier_col, how='left').drop([identifier_col, identifier_col_2], axis=1).rename(columns={identifier_col_agg: identifier_col_2, type_col_agg: type_col_2, info_col_agg: info_col_2, id_col: id_col_2})\n",
     "    return df\n",
     "\n",
-    "def integrate_edgefile(header, nodes_filename, source_filename, output_filename, ent1_type, ent1_col, ent2_type, ent2_col, source, weight_col_source, processing_function, weight_col, source_col, identifier_col, id_col, type_col, relationship, ent1_gene=False, ent2_gene=False):\n",
+    "def integrate_edgefile(header, nodes_filename, source_filename, output_filename, ent1_type, ent1_col, ent2_type, ent2_col, source, weight_col_source, processing_function, weight_col, source_col, identifier_col, id_col, type_col, relationship):\n",
     "    # header: output column format.order\n",
     "    # nodes_filename: file that has desired knowledge graph nodes\n",
     "    # source_filename: input filename\n",
@@ -126,17 +126,16 @@
     "    if ent1_type and ent2_type:\n",
     "        ent1_all_ids = set(nodes_df.loc[nodes_df[type_col] == ent1_type, identifier_col])\n",
     "        ent2_all_ids = set(nodes_df.loc[nodes_df[type_col] == ent2_type, identifier_col])\n",
-    "#         ent1_all_ids = set(nodes_df[nodes_df[type_col] == ent1_type][identifier_col])\n",
-    "#         ent2_all_ids = set(nodes_df[nodes_df[type_col] == ent2_type][identifier_col])\n",
     "    else:\n",
     "        ent1_all_ids = set(nodes_df[identifier_col])\n",
     "        ent2_all_ids = set(nodes_df[identifier_col])\n",
     "    \n",
     "    # filter for required nodes\n",
-    "    source_df = pd.read_csv(source_filename)    \n",
+    "    source_df = pd.read_csv(source_filename)\n",
+    "    \n",
     "    # filter\n",
     "    source_df = source_df[(source_df[ent1_col].isin(ent1_all_ids))&(source_df[ent2_col].isin(ent2_all_ids))]\n",
-    "        \n",
+    "    \n",
     "    # set weight to zero if there is no weight column in the data\n",
     "    if not weight_col_source:\n",
     "        weight_col_source = 'weight_col_source'\n",
@@ -172,15 +171,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5679 edges added from source integration_data_processed/disease_gene_relationships.csv\n",
+      "13962 edges added from source integration_data_processed/disease_gene_relationships.csv\n",
       "\n",
-      "2891 edges added from source integration_data_processed/drug_gene_relationships.csv\n",
+      "6377 edges added from source integration_data_processed/drug_gene_relationships.csv\n",
       "\n",
-      "21700 edges added from source integration_data_processed/gene_gene_relationships.csv\n",
+      "96852 edges added from source integration_data_processed/gene_gene_relationships.csv\n",
       "\n",
-      "6837 edges added from source integration_data_processed/gene_GO_relationships.csv\n",
+      "11426 edges added from source integration_data_processed/gene_GO_relationships.csv\n",
       "\n",
-      "7879 edges added from source integration_data_processed/gene_phenotype_relationships.csv\n",
+      "13211 edges added from source integration_data_processed/gene_phenotype_relationships.csv\n",
       "\n",
       "1748 edges added from source integration_data_processed/disease_phenotype_relationships.csv\n",
       "\n"
@@ -208,11 +207,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Data statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num relationships before integrating = 96108\n",
+      "num relationships added = 142124\n"
+     ]
+    }
+   ],
+   "source": [
+    "edges_df = pd.read_csv(OUTPUT_FILE_PATH)\n",
+    "\n",
+    "temp = edges_df[edges_df['evidence_source']=='CORD-19'][[id_col_1, rel_col, id_col_2]].drop_duplicates()\n",
+    "temp['triple'] = temp[id_col_1] + \"|\" + temp[rel_col] + '|' + temp[id_col_2]\n",
+    "triples_before_integration = set(temp['triple'])\n",
+    "\n",
+    "temp = edges_df[[id_col_1, rel_col, id_col_2]].drop_duplicates()\n",
+    "temp['triple'] = temp[id_col_1] + \"|\" + temp[rel_col] + '|' + temp[id_col_2]\n",
+    "triples_after_integration = set(temp['triple'])\n",
+    "\n",
+    "print('num relationships before integrating =', len(triples_before_integration))\n",
+    "new_triples_added = triples_after_integration.difference(triples_before_integration)\n",
+    "print('num relationships added =', len(new_triples_added)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "density before = 0.005220077130338432\n",
+      "density after = 0.012939499468460328\n",
+      "density increase (multiplication) = 2.4787946893078616\n"
+     ]
+    }
+   ],
+   "source": [
+    "nodes_df = pd.read_csv(NODE_MAPPING_FILE_PATH)\n",
+    "n = len(nodes_df)\n",
+    "PC = (n * (n-1))/2\n",
+    "density_before = (len(triples_before_integration) / PC) * 100\n",
+    "density_after = (len(triples_after_integration.union(triples_before_integration)) / PC) * 100\n",
+    "\n",
+    "print('density before =', density_before)\n",
+    "print('density after =', density_after)\n",
+    "print('density increase (multiplication) =', density_after/density_before)"
+   ]
   }
  ],
  "metadata": {
@@ -231,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
