--- a/stage_4_data_integration/process_data_sources.ipynb
+++ b/stage_4_data_integration/process_data_sources.ipynb
@@ -271,7 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83999\n"
+      "100782\n"
      ]
     },
     {
@@ -421,7 +421,7 @@
     {
      "data": {
       "text/plain": [
-       "86864"
+       "104534"
       ]
      },
      "execution_count": 10,
@@ -447,7 +447,12 @@
     "\n",
     "id_to_cui = id_to_cui_1.append(id_to_cui_2).drop_duplicates()\n",
     "id_to_cui['info'] = id_to_cui['info'].apply(lambda x: x.split(';'))\n",
-    "id_to_cui = id_to_cui.explode('info')"
+    "id_to_cui = id_to_cui.explode('info')\n",
+    "\n",
+    "id_to_cui['identifier'] = id_to_cui['identifier'].apply(lambda x: x.split(';'))\n",
+    "id_to_cui = id_to_cui.explode('identifier')\n",
+    "\n",
+    "id_to_cui = id_to_cui.drop_duplicates()"
    ]
   },
   {
@@ -653,7 +658,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "82424\n"
+      "99414\n"
      ]
     },
     {
@@ -890,6 +895,34 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>9606.ENSP00000000233</td>\n",
+       "      <td>9606.ENSP00000418915</td>\n",
+       "      <td>606</td>\n",
+       "      <td>ARF5</td>\n",
+       "      <td>180</td>\n",
+       "      <td>ADP-ribosylation factor 5; GTP-binding protein...</td>\n",
+       "      <td>CDKN2A</td>\n",
+       "      <td>167</td>\n",
+       "      <td>Cyclin-dependent kinase inhibitor 2A; Acts as ...</td>\n",
+       "      <td>C1412510</td>\n",
+       "      <td>C0384826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9606.ENSP00000000233</td>\n",
+       "      <td>9606.ENSP00000418915</td>\n",
+       "      <td>606</td>\n",
+       "      <td>ARF5</td>\n",
+       "      <td>180</td>\n",
+       "      <td>ADP-ribosylation factor 5; GTP-binding protein...</td>\n",
+       "      <td>CDKN2A</td>\n",
+       "      <td>167</td>\n",
+       "      <td>Cyclin-dependent kinase inhibitor 2A; Acts as ...</td>\n",
+       "      <td>C1412510</td>\n",
+       "      <td>C0249880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9606.ENSP00000000233</td>\n",
        "      <td>9606.ENSP00000356737</td>\n",
        "      <td>418</td>\n",
        "      <td>ARF5</td>\n",
@@ -901,34 +934,6 @@
        "      <td>C1412510</td>\n",
        "      <td>C1822658</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9606.ENSP00000000233</td>\n",
-       "      <td>9606.ENSP00000432568</td>\n",
-       "      <td>909</td>\n",
-       "      <td>ARF5</td>\n",
-       "      <td>180</td>\n",
-       "      <td>ADP-ribosylation factor 5; GTP-binding protein...</td>\n",
-       "      <td>SPTBN2</td>\n",
-       "      <td>2390</td>\n",
-       "      <td>Spectrin beta chain, non-erythrocytic 2; Proba...</td>\n",
-       "      <td>C1412510</td>\n",
-       "      <td>C1420389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9606.ENSP00000000233</td>\n",
-       "      <td>9606.ENSP00000427900</td>\n",
-       "      <td>910</td>\n",
-       "      <td>ARF5</td>\n",
-       "      <td>180</td>\n",
-       "      <td>ADP-ribosylation factor 5; GTP-binding protein...</td>\n",
-       "      <td>KIF13B</td>\n",
-       "      <td>1826</td>\n",
-       "      <td>Kinesin-like protein KIF13B; Involved in reorg...</td>\n",
-       "      <td>C1412510</td>\n",
-       "      <td>C1422625</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -937,9 +942,9 @@
        "               protein1              protein2  combined_score preferred_name1  \\\n",
        "0  9606.ENSP00000000233  9606.ENSP00000272298             490            ARF5   \n",
        "1  9606.ENSP00000000233  9606.ENSP00000418915             606            ARF5   \n",
-       "2  9606.ENSP00000000233  9606.ENSP00000356737             418            ARF5   \n",
-       "3  9606.ENSP00000000233  9606.ENSP00000432568             909            ARF5   \n",
-       "4  9606.ENSP00000000233  9606.ENSP00000427900             910            ARF5   \n",
+       "2  9606.ENSP00000000233  9606.ENSP00000418915             606            ARF5   \n",
+       "3  9606.ENSP00000000233  9606.ENSP00000418915             606            ARF5   \n",
+       "4  9606.ENSP00000000233  9606.ENSP00000356737             418            ARF5   \n",
        "\n",
        "   protein_size_x                                       annotation_x  \\\n",
        "0             180  ADP-ribosylation factor 5; GTP-binding protein...   \n",
@@ -951,16 +956,16 @@
        "  preferred_name2  protein_size_y  \\\n",
        "0           CALM2             149   \n",
        "1          CDKN2A             167   \n",
-       "2           GORAB             394   \n",
-       "3          SPTBN2            2390   \n",
-       "4          KIF13B            1826   \n",
+       "2          CDKN2A             167   \n",
+       "3          CDKN2A             167   \n",
+       "4           GORAB             394   \n",
        "\n",
        "                                        annotation_y CUI_gene_1 CUI_gene_2  \n",
        "0  Calmodulin 2 (phosphorylase kinase, delta); EF...   C1412510   C1413089  \n",
        "1  Cyclin-dependent kinase inhibitor 2A; Acts as ...   C1412510   C0525037  \n",
-       "2                           Golgin, RAB6 interacting   C1412510   C1822658  \n",
-       "3  Spectrin beta chain, non-erythrocytic 2; Proba...   C1412510   C1420389  \n",
-       "4  Kinesin-like protein KIF13B; Involved in reorg...   C1412510   C1422625  "
+       "2  Cyclin-dependent kinase inhibitor 2A; Acts as ...   C1412510   C0384826  \n",
+       "3  Cyclin-dependent kinase inhibitor 2A; Acts as ...   C1412510   C0249880  \n",
+       "4                           Golgin, RAB6 interacting   C1412510   C1822658  "
       ]
      },
      "execution_count": 20,
@@ -981,7 +986,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1821188\n"
+      "2143493\n"
      ]
     },
     {
@@ -1032,26 +1037,26 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C1412510</td>\n",
-       "      <td>C1822658</td>\n",
+       "      <td>C0384826</td>\n",
        "      <td>ARF5</td>\n",
-       "      <td>GORAB</td>\n",
-       "      <td>418</td>\n",
+       "      <td>CDKN2A</td>\n",
+       "      <td>606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>C1412510</td>\n",
-       "      <td>C1420389</td>\n",
+       "      <td>C0249880</td>\n",
        "      <td>ARF5</td>\n",
-       "      <td>SPTBN2</td>\n",
-       "      <td>909</td>\n",
+       "      <td>CDKN2A</td>\n",
+       "      <td>606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>C1412510</td>\n",
-       "      <td>C1422625</td>\n",
+       "      <td>C1822658</td>\n",
        "      <td>ARF5</td>\n",
-       "      <td>KIF13B</td>\n",
-       "      <td>910</td>\n",
+       "      <td>GORAB</td>\n",
+       "      <td>418</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1061,9 +1066,9 @@
        "  CUI_gene_1 CUI_gene_2 preferred_name1 preferred_name2  combined_score\n",
        "0   C1412510   C1413089            ARF5           CALM2             490\n",
        "1   C1412510   C0525037            ARF5          CDKN2A             606\n",
-       "2   C1412510   C1822658            ARF5           GORAB             418\n",
-       "3   C1412510   C1420389            ARF5          SPTBN2             909\n",
-       "4   C1412510   C1422625            ARF5          KIF13B             910"
+       "2   C1412510   C0384826            ARF5          CDKN2A             606\n",
+       "3   C1412510   C0249880            ARF5          CDKN2A             606\n",
+       "4   C1412510   C1822658            ARF5           GORAB             418"
       ]
      },
      "execution_count": 21,
@@ -1420,7 +1425,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "540050\n"
+      "580380\n"
      ]
     },
     {
@@ -1741,7 +1746,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "275340\n"
+      "293134\n"
      ]
     },
     {
@@ -2120,8 +2125,7 @@
    "outputs": [],
    "source": [
     "# HPO to CUI\n",
-    "df = df.merge(hpo_to_cui_df, how='left', left_on='HPO-ID', right_on='HPO').rename(columns={'CUI': 'CUI_HPO'})\n",
-    "\n"
+    "df = df.merge(hpo_to_cui_df, how='left', left_on='HPO-ID', right_on='HPO').rename(columns={'CUI': 'CUI_HPO'})\n"
    ]
   },
   {
@@ -2446,13 +2450,6 @@
     "print(len(df))\n",
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -2471,7 +2468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
