--- a/stage_5_format_for_database_import/format_for_neo4j_import.ipynb
+++ b/stage_5_format_for_database_import/format_for_neo4j_import.ipynb
@@ -117,7 +117,8 @@
     "        edges_neo4j_header.append(h + \":INT\")\n",
     "    else:\n",
     "        edges_neo4j_header.append(h + \":STRING\")\n",
-    "edges_df.columns = edges_neo4j_header    \n",
+    "edges_df.columns = edges_neo4j_header\n",
+    "edges_df = edges_df.reset_index(drop=True)\n",
     "edges_df.to_csv(os.path.join(NEO4J_OUTPUT_DIR, 'edges.csv'), index=False)"
    ]
   },
@@ -132,6 +133,7 @@
     "nodes_neo4j_header = [id_col + \":ID(Item)\", identifier_col + \":STRING\", type_col + \":STRING\", info_col + \":STRING\"]\n",
     "nodes_df.columns = nodes_neo4j_header\n",
     "nodes_df[\":LABEL\"] = 'Item'\n",
+    "nodes_df = nodes_df.reset_index(drop=True)\n",
     "nodes_df.to_csv(os.path.join(NEO4J_OUTPUT_DIR, 'nodes.csv'), index=False)"
    ]
   },
@@ -151,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "'[\"Activities & Behaviors\", \"Anatomy\", \"COVID-19 (disease)\", \"Chemicals & Drugs\", \"Chemicals & Drugs;Anatomy\", \"Concepts & Ideas\", \"Devices\", \"Disorders\", \"Genes & Molecular Sequences\", \"Genes & Molecular Sequences;Chemicals & Drugs\", \"Geographic Areas\", \"Living Beings\", \"Objects\", \"Objects;Organizations\", \"Occupations\", \"Organizations\", \"Phenomena\", \"Physiology\", \"Procedures\", \"SARS-CoV-2 (virus)\"]'"
+       "'[\"Activities & Behaviors\", \"Anatomy\", \"COVID-19 (disease)\", \"Chemicals & Drugs\", \"Chemicals & Drugs;Anatomy\", \"Concepts & Ideas\", \"Devices\", \"Disorders\", \"Genes & Molecular Sequences\", \"Genes & Molecular Sequences;Chemicals & Drugs\", \"Geographic Areas\", \"Living Beings\", \"Objects\", \"Occupations\", \"Organizations\", \"Organizations;Objects\", \"Phenomena\", \"Physiology\", \"Procedures\", \"SARS-CoV-2 (virus)\"]'"
       ]
      },
      "execution_count": 8,
@@ -227,6 +229,18 @@
     "evidence_sources = sorted(set(edges_df['evidence_source:STRING']))\n",
     "json.dumps(evidence_sources)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save edge weights distributions of evidence source to .json\n",
+    "data = edges_df.groupby('evidence_source:STRING')['weight:FLOAT'].apply(list).to_dict()\n",
+    "with open('weights.json', 'w') as f_out:\n",
+    "    json.dump(data, f_out)"
+   ]
   }
  ],
  "metadata": {
@@ -245,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
